src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Configuration_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Configuration Task</label>
        <referenceTo>Case_Configuration_Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDateTime__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Copy_For_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy For Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Year_Month__c</fullName>
        <formula>TEXT(year(datevalue(CreatedDate))) &amp; &quot;-&quot; &amp; if(MONTH(datevalue(CreatedDate))&gt;9,TEXT(MONTH(datevalue(CreatedDate))),&quot;0&quot; &amp; TEXT(MONTH(datevalue(CreatedDate))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year-Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rate__c</fullName>
        <label>Customer Rate</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Went_with_Another_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Went with Another Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was Address used as a DPA question</description>
        <label>DPA Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Contractual_Repayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Contractual Repayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Date_of_Birth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was Date of  Birth used as a DPA question</description>
        <label>DPA Date of Birth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was Email Address used as a DPA question</description>
        <label>DPA Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Full_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was Full name used as a DPA question</description>
        <label>DPA Full Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Member_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Member Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Memorable_Word__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Memorable Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Passed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Postcode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was Postcode used as a DPA question</description>
        <label>DPA Postcode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Repayment_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Monthly Repayment Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPA_Repayment_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPA Repayment Date of Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Time_Investing_p2p__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Time Investing in P2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_Zopa__c</fullName>
        <label>How did you hear about Zopa?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Direct mail</fullName>
                </value>
                <value>
                    <fullName>Internet search</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Other (add notes on next page)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_This_First_Time_Investing_in_P2P2__c</fullName>
        <label>Is This First Time Investing in P2P</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_N_A</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Task creation method in example: Task has been created manually or automatically.</description>
        <inlineHelpText>Task creation method in example: Task has been created manually or automatically.</inlineHelpText>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moved_To_Underwriting__c</fullName>
        <description>Date stamp when CP agent presses Move to Underwriting button</description>
        <label>Moved To Underwriting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutcomeCode__c</fullName>
        <description>New voice media picklist for outbound calls</description>
        <label>OutcomeCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Connect</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
                <value>
                    <fullName>Case Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RCCodeStatus__c</fullName>
        <label>RCCodeStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Triggered</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Errored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Could not Contact Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_failed_DPA__c</fullName>
        <label>Reason for failed DPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Due_Date__c</fullName>
        <label>Review Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReviewedSameDay__c</fullName>
        <description>Shows if a review was completed the same day as review due</description>
        <formula>Review_Due_Date__c =  CompletedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewedSameDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <formula>IF( 
    NOT(ISBLANK( CompletedDateTime__c )),
    TRUE,
    (FALSE)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_For__c</fullName>
        <label>Task For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case-Prep</fullName>
                </value>
                <value>
                    <fullName>Underwriter</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Case Prep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_description__c</fullName>
        <label>Reason for the Arrears</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Contact__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Review_Due_Date__c)),
    NOT(ISBLANK(CompletedDateTime__c))
  ),
  (CompletedDateTime__c - Review_Due_Date__c)*24*60*60,
  NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Understands_Safeguard_2__c</fullName>
        <label>Understands Safeguard is not a Guarante2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_Safeguard_is_not_a_Guarantee__c</fullName>
        <label>Understands Safeguard is not a Guarantee</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_how_to_access_their_loans_2__c</fullName>
        <label>Understands how to access their loans_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_how_to_access_their_loans__c</fullName>
        <label>Understands how to access their loans</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_lending_t_Individuals_2__c</fullName>
        <label>Understands lending to Individuals_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_lending_to_Individuals__c</fullName>
        <label>Understands lending to Individuals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_why_rate_might_differ2__c</fullName>
        <label>Understands why rate might differ2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Understands_why_rate_might_differ__c</fullName>
        <label>Understands why rate might differ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Understanding_Questions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Provider__c</fullName>
        <label>Which Provider</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>